# northwind-streamlit-migration

./: .gitignore  README.md  pyproject.toml
doc/: research.md
scripts/: migrate_to_snowflake.py  verify_migration.py
streamlit_app/: app.py  environment.yml  snowflake.yml
